<resources>
    <string name="app_name">Afaq</string>
    <string name="action_settings">Settings</string>
    <string name="some_error">Something went wrong</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email_phone">Invalid Phone</string>
    <string name="input_empty_email_phone">Email or Phone cannot be empty</string>
    <string name="input_empty_name">Full Name cannot be empty</string>
    <string name="empty_screen">We do not have anything\nhere right now. Please Retry</string>
    <string name="app_market_link" translatable="false">app_market_link</string>
    <string name="app_google_play_store_link" translatable="false">app_google_play_store_link</string>
    <string name="navigation_drawer_open" translatable="false">navigation drawer open</string>
    <string name="navigation_drawer_close" translatable="false">navigation drawer close</string>
    <string name="facebook_app_id" translatable="false">621465475108777</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb621465475108777</string>
    <string name="first_intro_title">Smarter lifestyle awaits you</string>
    <string name="first_intro_text">Discover many numbers of artworks\n for many artists on the hole world\n and choose your favourite one.</string>
    <string name="second_intro_title"><![CDATA[Discover Artists\n & their Showrooms]]></string>
    <string name="second_intro_text"><![CDATA[Search for any Artist you like.. & any artwork that you like and want to buy]]></string>
    <string name="third_intro_title">See what’s events\n nearby to you</string>
    <string name="third_intro_text">You will be notified with near by events</string>
    <string name="forth_intro_title">Pay your favorites</string>
    <string name="forth_intro_text">Easy to checkout product which\n you selected</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_back">Welcome back</string>
    <string name="to_continue_first_verify">To continue, first verify that it’s you</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="create_one">Create one</string>
    <string name="create_an_account">Create an account</string>
    <string name="new_register">New Register</string>
    <string name="enter_your_information">Enter your information</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="have_an_account">Have an account?</string>
    <string name="continue_to">Continue</string>
    <string name="register">Register</string>
    <string name="sign_in_instead">Sign in instead</string>
    <string name="accept_terms"><![CDATA[I accept terms & conditions]]></string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="verify_phone_number">Verify phone number?</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="featured_artworks">Featured ARTWORKS</string>
    <string name="picks_for_you">Picks for you</string>
    <string name="load_more">Load more</string>
    <string name="categories">CATEGORIES</string>
    <string name="newsletter_notify"><![CDATA[Get the Newsletter & notify me on common Art Events]]></string>
    <string name="turn_on_notification">Turn on notification for weekly highlights and updates</string>
    <string name="no_thanks">No Thanks</string>
    <string name="turn_on">Turn On</string>
    <string name="explore_artists">Explore ARTISTS</string>
    <string name="follow">Follow</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="resend">Resend</string>
    <string name="send_code">Send code</string>
    <string name="invalid_accept_terms"><![CDATA[To continue accept terms & conditions]]></string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="invalid_code">Invalid code</string>
    <string name="instant_validation">instant validation</string>
    <string name="happening_today">Happening TODAY</string>
    <string name="view_more">More</string>
    <string name="more_event_in_qatar">More EVENTS</string>
    <string name="featured_events">Featured Events</string>
    <string name="for_you">For You</string>
    <string name="cart">Cart</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="feed_title">Feeds</string>
    <string name="reviews">Reviews</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="direction">Directions</string>
    <string name="price">Price</string>
    <string name="location">LOCATION</string>
    <string name="date">Date</string>
    <string name="to">TO</string>
    <string name="event_details">Event details</string>
    <string name="created_by">CREATED BY</string>
    <string name="add_to_calender">Add to calender</string>
    <string name="descriptions">Descriptions</string>
    <string name="buy_now">Buy Now</string>
    <string name="customize_buy_option">Customize buy option</string>
    <string name="related">RELATED</string>
    <string name="featured">Featured</string>
    <string name="promoted">Promoted</string>
    <string name="image_galleries">Image galleries</string>
    <string name="gallery">Gallery</string>
    <string name="afaq_arts">Afaq Arts</string>
    <string name="latest">Latest</string>
    <string name="save">Save</string>
    <string name="view_on_room">View on room</string>
    <string name="share">Share</string>
    <string name="book_now">Book Now</string>
    <string name="get_notification">Get Notification</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="choose_language">Choose language</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="book_for_me">Book For Me</string>
    <string name="register_now_on_the_event">Register Now \non the Event</string>
    <string name="request_submitted_successfully">Request submitted successfully!</string>
    <string name="back">Back</string>
    <string name="go_to_home">Go to home</string>
    <string name="artworks">artworks</string>
    <string name="select_your_interests">Select your Interests</string>
    <string name="become_artist">Join Us</string>
    <string name="logout">Logout</string>
    <string name="artist_artwork">Artworks</string>
    <string name="artists">Artists</string>
    <string name="unFollow">Un follow</string>
    <string name="ok">OK</string>
    <string name="show_ticket">Show Ticket</string>
    <string name="interests">Interests</string>
    <string name="lost_password">Forget password</string>
    <string name="set_password">Set a password</string>
    <string name="enter_your_password">Enter your password strongly</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="confirm">Confirm</string>
    <string name="input_not_match_password">passwords not match</string>
    <string name="rest_password">Reset Password</string>
    <string name="your_request_will_be_confirmed_on_email_soon">Your request is in review,\n you will notified on email soon.</string>
    <string name="km_distance">(5Km distance)</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="check_out">Checkout</string>
    <string name="sub_total">Sub Total:</string>
    <string name="qar_currency">QAR</string>
    <string name="artist">Artist</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save changes</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="shipping">Shipping</string>
    <string name="pickup_location">Picked Up Location</string>
    <string name="total_quantity">Total</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="payment_status">Payment Status</string>
    <string name="order_status">Order Status</string>
    <string name="order_number">Order Number</string>
    <string name="complete">Complete</string>
    <string name="order_title">My Orders</string>
    <string name="order_id">Order ID</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="placed_at">Order Date</string>
    <string name="payment">Payment</string>
    <string name="street_name">Street Name</string>
    <string name="city">City</string>
    <string name="building_number">Building Number</string>
    <string name="floor">Floor</string>
    <string name="flat_number">Flat Number</string>
    <string name="next">Next</string>
    <string name="order_details">Order Details</string>
    <string name="coupon">Have a Coupon ?</string>
    <string name="enter_here">Enter Here</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="order_total">Order Total</string>
    <string name="google_pay">Google Pay</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="visa">Visa</string>
    <string name="input_empty_street">Please Enter Street Name</string>
    <string name="input_empty_city">Please Enter City</string>
    <string name="input_empty_phone">Please Enter Phone Number</string>
    <string name="enter_coupon">Enter Coupon</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="invalid_verify_code">Error Verify Code</string>
    <string name="no_reults_found">No results found.</string>
    <string name="we_could_t_find_any_results">Sorry, We could’t find any results</string>
    <string name="your_profile_is_updated_sucess">Your data has been successfully updated </string>
    <string name="request_submitted_fail">Request  failled!</string>
    <string name="your_profile_is_updated_fail">Your profile failed updated</string>
    <string name="complete_payment_method">Please Choose Payment Method</string>
    <string name="expected_delivery_date">Expected Delivery Date</string>
    <string name="shipping_via">Shipping Via</string>
    <string name="pending">Pending</string>
    <string name="shipped">Shipped</string>
    <string name="delivered">Delivered</string>
    <string name="place_order">Place Order</string>
    <string name="not_location_available">location Not Availabel</string>
    <string name="language">Language</string>
    <string name="mastercard">MasterCard</string>
    <string name="the_result">The result</string>
    <string name="action_scan">Scan Barcode</string>
    <string name="default_notification_channel_id" translatable="false">0</string>
    <string name="email_sent">We send you an email with your</string>
    <string name="tracking_order">Your tracking order number is</string>
    <string name="art_name">"Art Name : "</string>
    <string name="art_price">Art Price : </string>
    <string name="xarkas">XARKAS</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
</resources>